infra/civicgrid-gateway/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: civicgrid-api
  namespace: civicgrid
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: civicgrid-gateway
  hostnames:
    - "api.civicgrid.org"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: civicgrid-civicgrid-api
          port: 8000
          weight: 1
